feat: expand German localization for NocoBase plugins compared to chinese translation
This commit adds and enhances German translation files across multiple NocoBase plugins, including:
- Workflow plugins (action trigger, manual, notification, etc.)
- File management
- Charts and data visualization
- Async task management
- Import/export functionality
- Theme editor
- And several other core and extension plugins

--- a/packages/plugins/@nocobase/plugin-acl/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-acl/src/locale/de-DE.json
@@ -3,5 +3,9 @@
   "The user role does not exist. Please try signing in again": "Die Benutzerrolle existiert nicht. Bitte versuchen Sie, sich erneut anzumelden",
   "New role": "Neue Rolle",
   "Permissions": "Berechtigungen",
-  "Desktop menu": "Desktop-Menü"
+  "Roles & Permissions": "Rollen und Berechtigungen",
+  "General": "Allgemein",
+  "Desktop menu": "Desktop-Menü",
+  "Plugin settings": "Plugin-Einstellungen",
+  "Data sources": "Datenquellen"
 }
