--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/de-DE.json
@@ -72,6 +72,7 @@
   "isPercent": "istProzent",
   "isGroup": "istGruppiert",
   "smooth": "geglättet",
+  "Collapse": "Einklappen",
   "Expand": "Erweitern",
   "Current filter": "Aktueller Filter",
   "Add custom field": "Benutzerdefiniertes Feld hinzufügen",
