--- a/packages/plugins/@nocobase/plugin-gantt/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-gantt/src/locale/de-DE.json
@@ -2,5 +2,6 @@
   "Title field": "Titelfeld",
   "Time scale": "Zeitskala",
   "Start date field": "Startdatumsfeld",
+  "End date field": "Enddatumsfeld",
   "Progress field": "Fortschrittsfeld"
 }
