--- a/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/de-DE.json
@@ -11,5 +11,6 @@
   "Entity relationship only": "Nur Entitätsbeziehungen",
   "Inheritance relationship only": "Nur Vererbungsbeziehungen",
   "Graphical interface": "Grafische Benutzeroberfläche",
+  "Auto layout": "Automatisches Layout",
   "Selection": "Auswahl"
 }
