--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/de-DE.json
@@ -18,9 +18,9 @@
   "Actions": "Aktionen",
   "Configure": "Konfigurieren",
   "Add new": "Neu hinzufügen",
-  "Trigger From": "Auslöser von",
+  "Trigger from": "Auslöser von",
   "Status": "Status",
-  "Created At": "Erstellt am",
+  "Created at": "Erstellt am",
   "Delete record": "Datensatz löschen",
   "Are you sure you want to delete it?": "Sind Sie sicher, dass Sie es löschen möchten?",
   "Deleted successfully!": "Erfolgreich gelöscht!",
@@ -28,9 +28,12 @@
   "Select users": "Benutzer auswählen",
   "Query users": "Benutzer abfragen",
   "Receiver type": "Empfängertyp",
+  "Manual input": "Manuelle Eingabe",
+  "Select user": "Benutzer auswählen",
   "No channel enabled yet": "Noch kein Kanal aktiviert",
   "Success": "Erfolg",
   "Fail": "Fehlschlag",
+  "Failure": "Fehlschlag",
   "Reason": "Grund",
   "Failed reason": "Fehlergrund",
   "Log detail": "Protokolldetail",
