--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/de-DE.json
@@ -1,4 +1,6 @@
 {
+  "Theme editor": "Theme-Editor",
+  "Themes": "Themes",
   "Theme": "Theme",
   "Local": "Lokal",
   "Dark theme": "Dunkles Theme",
@@ -6,6 +8,18 @@
   "Non-optional": "Nicht optional",
   "Current": "Aktuell",
   "Default": "Standard",
+  "Delete theme": "Theme löschen",
+  "Deletion is unrecoverable. Confirm deletion?": "Das Löschen ist nicht rückgängig zu machen. Löschen bestätigen?",
+  "Deleted successfully": "Erfolgreich gelöscht",
+  "Updated successfully": "Erfolgreich aktualisiert",
+  "User selectable": "Vom Benutzer auswählbar",
+  "Default theme": "Standard-Theme",
+  "Add new theme": "Neues Theme hinzufügen",
+  "Edit based on current theme": "Basierend auf dem aktuellen Theme bearbeiten",
+  "Create a brand new theme": "Ein völlig neues Theme erstellen",
+  "Dark": "Dunkel",
+  "Compact": "Kompakt",
+  "Compact dark": "Kompakt dunkel",
   "Theme Editor": "Theme-Editor",
   "Save": "Speichern",
   "Close": "Schließen",
