--- a/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/de-DE.json
@@ -13,6 +13,9 @@
   "Success": "Erfolg",
   "Failed": "Fehlgeschlagen",
   "Authenticator": "Authentifizierer",
+  "dingtalk": "DingTalk",
+  "wecom": "WeCom",
+  "default": "Standard",
   "Retry": "Wiederholen",
   "No user data source plugin installed": "Kein Benutzerdatenquellen-Plugin installiert",
   "View documentation": "Dokumentation anzeigen",
