--- a/packages/plugins/@nocobase/plugin-action-bulk-edit/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-action-bulk-edit/src/locale/de-DE.json
@@ -1,4 +1,5 @@
 {
   "Bulk edit": "Massenbearbeitung",
-  "Data will be updated": "Daten werden aktualisiert"
+  "Data will be updated": "Daten werden aktualisiert",
+  "Entire collection": "Gesamte Sammlung"
 }
