--- a/packages/plugins/@nocobase/plugin-action-bulk-update/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-action-bulk-update/src/locale/de-DE.json
@@ -1,5 +1,6 @@
 {
   "Bulk update": "Massenaktualisierung",
   "After successful bulk update": "Nach erfolgreicher Massenaktualisierung",
-  "Please select the records to be updated": "Bitte wählen Sie die zu aktualisierenden Datensätze aus"
+  "Please select the records to be updated": "Bitte wählen Sie die zu aktualisierenden Datensätze aus",
+  "Entire collection": "Gesamte Sammlung"
 }
