--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/de-DE.json
@@ -3,6 +3,7 @@
   "File size cannot exceed 10M": "Die Dateigröße darf 10 MB nicht überschreiten",
   "Please upload the file of Excel": "Bitte laden Sie die Excel-Datei hoch",
   "Import Data": "Daten importieren",
+  "Import": "Importieren",
   "Start import": "Import starten",
   "Import explain": "Anleitung",
   "Download template": "Vorlage herunterladen",
@@ -12,7 +13,7 @@
   "Download tips": "- Laden Sie die Vorlage herunter und füllen Sie die Daten gemäß dem Format aus \r\n - Es wird nur das erste Arbeitsblatt importiert \r\n - Ändern Sie nicht die Kopfzeile der Vorlage, um einen Importfehler zu vermeiden",
   "Import warnings": "Sie können bis zu {{limit}} Datenzeilen auf einmal importieren, alles darüber hinaus wird ignoriert.",
   "Upload placeholder": "Ziehen Sie die Datei hierher oder klicken Sie zum Hochladen, die Dateigröße sollte 80 MB nicht überschreiten",
-  "Excel data importing": "Excel-Datenimport",
+  "Excel data importing": "Excel-Datenimport läuft, bitte schließen Sie das Fenster nicht",
   "{{successCount}} records have been successfully imported": "{{successCount}} Datensätze wurden erfolgreich importiert",
   "To download the failure data": "Um die fehlgeschlagenen Daten herunterzuladen",
   "Add importable field": "Importierbares Feld hinzufügen",
@@ -38,5 +39,13 @@
   "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"": "Kopfzeile stimmt nicht überein in Spalte {{column}}: erwartet \"{{expected}}\", aber erhalten \"{{actual}}\"",
   "No data to import": "Keine Daten zum Importieren",
   "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Fehler beim Importieren von Zeile {{row}}, {{message}}, Zeilendaten: {{data}}",
-  "import-error": "Fehler beim Importieren von Zeile {{rowIndex}}, Zeilendaten: {{rowData}}, Ursache: {{causeMessage}}"
+  "import-error": "Fehler beim Importieren von Zeile {{rowIndex}}, Zeilendaten: {{rowData}}, Ursache: {{causeMessage}}",
+  "Import completed": "Import abgeschlossen: {{success}} Datensätze importiert, {{updated}} Datensätze aktualisiert, {{skipped}} Datensätze übersprungen, insgesamt {{total}} Datensätze",
+  "Successfully imported": "Erfolgreich importiert",
+  "Updated records": "Aktualisierte Datensätze",
+  "Skipped records": "Übersprungene Datensätze",
+  "Total records": "Gesamtzahl der Datensätze",
+  "View result": "Ergebnis anzeigen",
+  "ImportResult": "{{success}} importiert, {{updated}} aktualisiert, {{skipped}} übersprungen, insgesamt {{total}}",
+  "Task result": "Aufgabenergebnis"
 }
