--- a/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/de-DE.json
@@ -7,5 +7,8 @@
   "Custom domain": "Benutzerdefinierte Domain",
   "Manage applications": "Anwendungen verwalten",
   "Standalone deployment": "Eigenständige Bereitstellung",
-  "Auto start": "Automatischer Start"
+  "Auto start": "Automatischer Start",
+  "Start mode": "Startmodus",
+  "Start on first visit": "Beim ersten Besuch starten",
+  "Start with main application": "Mit Hauptanwendung starten"
 }
