--- a/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/de-DE.json
@@ -7,5 +7,7 @@
   "When adding a new record, create a snapshot for its relational record and save in the current record. The snapshot is not updated when the record is subsequently updated.": "Beim Hinzufügen eines neuen Datensatzes wird ein Snapshot für seinen Beziehungsdatensatz erstellt und im aktuellen Datensatz gespeichert. Der Snapshot wird nicht aktualisiert, wenn der Datensatz später aktualisiert wird.",
   "The association field to snapshot": "Das Verknüpfungsfeld für den Snapshot",
   "Snapshot the snapshot's association fields": "Snapshot der Verknüpfungsfelder des Snapshots",
-  "Please select": "Bitte auswählen"
+  "Please select": "Bitte auswählen",
+  "When a record is created, association data is backed up in a snapshot": "Wenn ein Datensatz erstellt wird, werden Verknüpfungsdaten in einem Snapshot gesichert",
+  "Snapshot data": "Snapshot-Daten"
 }
