--- a/packages/plugins/@nocobase/plugin-users/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-users/src/locale/de-DE.json
@@ -5,5 +5,8 @@
   "Remove user": "Benutzer entfernen",
   "Are you sure you want to remove it?": "Sind Sie sicher, dass Sie es entfernen möchten?",
   "Random password": "Zufälliges Passwort",
+  "Users manager": "Benutzerverwaltung",
+  "Allow edit profile": "Bearbeitung des Profils erlauben",
+  "Allow change password": "Passwortänderung erlauben",
   "User profile is not allowed to be edited": "Das Benutzerprofil darf nicht bearbeitet werden"
 }
