--- a/packages/plugins/@nocobase/plugin-workflow-request/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-workflow-request/src/locale/de-DE.json
@@ -9,12 +9,19 @@
   "Add parameter": "Parameter hinzufügen",
   "Body": "Body",
   "Use variable": "Variable verwenden",
+  "Add key-value pairs": "Schlüssel-Wert-Paare hinzufügen",
   "Format": "Format",
   "Insert": "Einfügen",
   "Timeout config": "Timeout-Konfiguration",
   "ms": "ms",
+  "Timeout": "Timeout",
+  "Milliseconds": "Millisekunden",
   "Input request data": "Anfragedaten eingeben",
   "Only support standard JSON data": "Unterstützt nur Standard-JSON-Daten",
   "\"Content-Type\" only support \"application/json\", and no need to specify": "\"Content-Type\" unterstützt nur \"application/json\" und muss nicht angegeben werden",
-  "Ignore failed request and continue workflow": "Fehlgeschlagene Anfrage ignorieren und Workflow fortsetzen"
+  "\"Content-Type\" will be ignored from headers.": "\"Content-Type\" wird aus den Headern ignoriert.",
+  "Ignore failed request and continue workflow": "Fehlgeschlagene Anfrage ignorieren und Workflow fortsetzen",
+  "Status code": "Statuscode",
+  "Data": "Daten",
+  "Response headers": "Antwort-Header"
 }
