Updating italian translations (#6434)
* Add italian translation

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

The following strings have been intentionally not translated to avoid misinterpretation of the technical terms:

Access Key ID
Access Key Secret
Secret ID
Secret Key

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Create it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Update it-IT.json

* Create it-IT.json


--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -127,7 +127,7 @@
     "Tablet device": "Tablet",
     "Desktop device": "Desktop",
     "Large screen device": "Schermo di grandi dimensioni",
-    "Collapse": "Collassa",
+    "Collapse": "Comprimi",
     "Select data source": "Seleziona origine dati",
     "Calendar": "Calendario",
     "Delete events": "Elimina eventi",
@@ -171,10 +171,10 @@
     "Add new": "Aggiungi nuovo",
     "Add record": "Aggiungi record",
     "Add child": "Aggiungi figlio",
-    "Collapse all": "Collassare tutto",
-    "Expand all": "Espandere tutto",
-    "Expand/Collapse": "Espandere/Collassare",
-    "Default collapse": "Collassa di default",
+    "Collapse all": "Comprimi tutto",
+    "Expand all": "Espandi tutto",
+    "Expand/Collapse": "Espandi/Comprimi",
+    "Default collapse": "Comprimi di default",
     "Tree table": "Tabella ad albero",
     "Custom field display name": "Nome visualizzato campo personalizzato ",
     "Display fields": "Visualizza campi",
@@ -344,7 +344,7 @@
     "Edit chart": "Modifica grafico",
     "Add text": "Aggiungi testo",
     "Filterable fields": "Campi filtrabili",
-    "Edit button": "Pulsante Modifica",
+    "Edit button": "Modifica pulsante",
     "Hide": "Nascondi",
     "Enable actions": "Abilita operazioni",
     "Import": "Importa",
@@ -552,7 +552,7 @@
     "Fields values": "Valori campi",
     "The field has been deleted": "Il campo è stato eliminato",
     "When submitting the following fields, the saved values are": "Quando si inviano i seguenti campi, i valori salvati sono",
-    "After successful submission": "Dopo una invio riuscito",
+    "After successful submission": "Dopo un invio riuscito",
     "Then": "Poi",
     "Stay on current page": "Resta sulla pagina corrente",
     "Redirect to": "Reindirizza a",
@@ -658,9 +658,9 @@
     "After clicking the custom button, the following field values will be assigned according to the following form.": "Dopo aver fatto clic sul pulsante personalizza, i seguenti valori verranno assegnati in base al seguente modulo.",
     "After clicking the custom button, the following fields of the current record will be saved according to the following form.": "Dopo aver fatto clic sul pulsante personalizza, i seguenti campi del record corrente verranno salvati in base al seguente modulo.",
     "Button background color": "Colore sfondo del pulsante",
-    "Highlight": "Evidenzia",
-    "Danger red": "Pericolo rosso",
-    "Custom request": "Personalizza richiesta",
+    "Highlight": "Evidenziato",
+    "Danger red": "Rosso pericolo",
+    "Custom request": "Richiesta personalizzata",
     "Request settings": "Impostazioni richiesta",
     "Request URL": "URL richiesta",
     "Request method": "Metodo richiesta",
@@ -753,7 +753,7 @@
     "Update all data?": "Aggiornare tutti i dati?",
     "Remains the same": "Rimane lo stesso",
     "Changed to": "Cambiato in",
-    "Clear": "Pulisci",
+    "Clear": "Cancella",
     "Add attach": "Aggiungi allegato",
     "Please select the records to be updated": "Si prega di selezionare i record da aggiornare",
     "Selector": "Selettore",
@@ -841,7 +841,7 @@
     "This variable has been deprecated and can be replaced with \"Current form\"": "Questa variabile è stata deprecata e può essere sostituita con \"Current form\"",
     "The value of this variable is derived from the query string of the page URL. This variable can only be used normally when the page has a query string.": "Il valore di questa variabile deriva dalla stringa di ricerca nell'URL della pagina. Questa variabile può essere utilizzata normalmente solo quando la pagina ha una stringa di ricerca.",
     "URL search params": "Parametri di ricerca URL",
-    "Expand All": "Espandere tutto",
+    "Expand All": "Espandi tutto",
     "Search": "Ricerca",
     "Clear default value": "Cancella il valore predefinito",
     "Open in new window": "Apri in una nuova finestra",
