--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -191,8 +191,8 @@
     "This is a demo text, **supports Markdown syntax**.": "Questo è un testo demo, ** supporta la sintassi di Markdown **.",
     "Filter": "Filtro",
     "Connect data blocks": "Collega blocchi di dati",
-    "Action type": "Tipo di operazione",
-    "Actions": "Operazioni",
+    "Action type": "Tipo di azione",
+    "Actions": "Azioni",
     "Insert": "Inserisci",
     "Insert if not exists": "Inserisci se non esiste",
     "Insert if not exists, or update": "Inserisci se non esiste o aggiorna",
@@ -346,7 +346,7 @@
     "Filterable fields": "Campi filtrabili",
     "Edit button": "Modifica pulsante",
     "Hide": "Nascondi",
-    "Enable actions": "Abilita operazioni",
+    "Enable actions": "Abilita azioni",
     "Import": "Importa",
     "Export": "Esporta",
     "Customize": "Personalizza",
@@ -354,7 +354,7 @@
     "Function": "Funzione",
     "Popup form": "Modulo Popup",
     "Flexible popup": "Popup flessibile",
-    "Configure actions": "Configura operazioni",
+    "Configure actions": "Configura azioni",
     "Display order number": "Visualizza numero ordinamento",
     "Enable drag and drop sorting": "Abilita l'ordinamento con drag and drop",
     "Triggered when the row is clicked": "Attivato quando si fa clic sulla riga",
@@ -471,13 +471,13 @@
     "Configure": "Configura",
     "Configure permissions": "Configura permessi",
     "Edit role": "Modifica ruolo",
-    "Action permissions": "Permessi su operazioni",
+    "Action permissions": "Permessi su azioni",
     "Menu permissions": "Permessi su menu",
     "Menu item name": "Nome voce di menu",
     "Allow access": "Consenti accesso",
-    "Action name": "Nome operazione",
-    "Allow action": "Consenti operazione",
-    "Action scope": "Ambito operazione",
+    "Action name": "Nome azione",
+    "Allow action": "Consenti azione",
+    "Action scope": "Ambito azione",
     "Operate on new data": "Operare su nuovi dati",
     "Operate on existing data": "Operare su dati esistenti",
     "Yes": "Si",
@@ -507,7 +507,7 @@
     "Template name": "Nome modello",
     "Block type": "Tipo blocco",
     "No blocks to connect": "Nessun blocco per connettersi",
-    "Action column": "Colonna operazioni",
+    "Action column": "Colonna azione",
     "Records per page": "Record per pagina",
     "(Fields only)": "(Solo campi)",
     "Button title": "Titolo pulsante",
@@ -542,7 +542,7 @@
     "Identifier for program usage. Support letters, numbers and underscores, must start with an letter.": "Identificatore per l'utilizzo del programma. Supporta lettere, numeri e underscore, deve iniziare con una lettera.",
     "Drawer": "Cassetto",
     "Dialog": "Dialogo",
-    "Delete action": "Elimina operazione",
+    "Delete action": "Elimina azione",
     "Custom column title": "Titolo colonna personalizzata",
     "Column title": "Titolo colonna",
     "Original title: ": "Titolo originale: ",
@@ -556,7 +556,7 @@
     "Then": "Poi",
     "Stay on current page": "Resta sulla pagina corrente",
     "Redirect to": "Reindirizza a",
-    "Save action": "Salva operazione",
+    "Save action": "Salva azione",
     "Exists": "Esiste",
     "Add condition": "Aggiungi condizione",
     "Add condition group": "Aggiungi gruppo di condizioni",
@@ -598,13 +598,13 @@
     "Delete role": "Elimina il ruolo",
     "Role display name": "Nome visualizzato ruolo",
     "Default role": "Ruolo predefinito",
-    "All collections use general action permissions by default; permission configured individually will override the default one.": "Tutte le raccolte utilizzano i permessi di operazioni generali per impostazione predefinita; I permessi configurati individualmente sovrascriveranno quelli predefiniti.",
+    "All collections use general action permissions by default; permission configured individually will override the default one.": "Tutte le raccolte utilizzano i permessi azioni generali per impostazione predefinita; I permessi configurati individualmente sovrascriveranno quelli predefiniti.",
     "Allows configuration of the whole system, including UI, collections, permissions, etc.": "Consente la configurazione dell'intero sistema, tra cui interfaccia utente, raccolte, permessi, ecc.",
     "New menu items are allowed to be accessed by default.": "È possibile accedere a nuove voci di menu per impostazione predefinita.",
     "Global permissions": "Permessi globali",
     "General permissions": "Permessi generali",
-    "Global action permissions": "Permessi operazioni globali",
-    "General action permissions": "Permessi operazioni generali",
+    "Global action permissions": "Permessi azioni globali",
+    "General action permissions": "Permessi azioni generali",
     "Plugin settings permissions": "Permessi impostazioni plugin",
     "Allow to desgin pages": "Consenti progettazione pagine",
     "Allow to manage plugins": "Consenti gestione plugin",
@@ -612,11 +612,11 @@
     "Allows to configure interface": "Consente di configurare l'interfaccia",
     "Allows to install, activate, disable plugins": "Consente di installare, attivare, disabilitare i plugin",
     "Allows to configure plugins": "Consente di configurare i plugin",
-    "Action display name": "Nome visualizzato operazione",
+    "Action display name": "Nome visualizzato azione",
     "Allow": "Permetti",
     "Data scope": "Ambito dei dati",
-    "Action on new records": "Operazione su nuovi record",
-    "Action on existing records": "Operazione su record esistenti",
+    "Action on new records": "Azione su nuovi record",
+    "Action on existing records": "Azione su record esistenti",
     "All records": "Tutti i record",
     "Own records": "Record propri",
     "Permission policy": "Policy di autorizzazione",
@@ -624,7 +624,7 @@
     "General": "Generale",
     "Accessible": "Accessibile",
     "Configure permission": "Configura permesso",
-    "Action permission": "Permesso operazione",
+    "Action permission": "Permesso azione",
     "Field permission": "Permesso campo",
     "Scope name": "Nome ambito",
     "Unsaved changes": "Modifiche non salvate",
@@ -796,7 +796,7 @@
     "Current form": "Modulo corrente",
     "Current object": "Oggetto corrente",
     "Linkage with form fields": "Collegamento con i campi del modulo",
-    "Allow add new, update and delete actions": "Consenti operazioni aggiungi nuovo, aggiorna ed elimina",
+    "Allow add new, update and delete actions": "Consenti azioni aggiungi nuovo, aggiorna ed elimina",
     "Date display format": "Formato di visualizzazione della data",
     "Assign  data scope for the template": "Assegna l'ambito dei dati per il modello",
     "Table selected records": "Tabella record selezionati",
