--- a/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/it-IT.json
@@ -6,4 +6,15 @@
   "Associations to use": "Associazioni da utilizzare",
   "User submitted form": "Modulo inviato dall'utente",
   "Role of user submitted form": "Ruolo del modulo inviato dall'utente"
+  "Collection": "Raccolta",
+  "The collection to which the triggered data belongs.": "La raccolta a cui appartengono i dati attivati.",
+  "Trigger mode": "Modalità di attivazione",
+  "Local mode, triggered after the completion of actions bound to this workflow": "Modalità locale, attivata dopo il completamento delle azioni associate a questo flusso di lavoro",
+  "Global mode, triggered after the completion of the following actions": "Modalità globale, attivata dopo il completamento delle seguenti azioni",
+  "Select actions": "Seleziona azioni",
+  "Create record action": "Azione di creazione record",
+  "Update record action": "Azione di aggiornamento record",
+  "Trigger data": "Dati attivazione",
+  "User acted": "Utente che ha agito",
+  "Role of user acted": "Ruolo dell'utente che ha agito"
 }
