--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
@@ -23,8 +23,8 @@
   "Calendar collection": "Raccolta calendario",
   "Create calendar block": "Crea blocco calendario",
   "Filter": "Filtro",
-  "Configure actions": "Configura operazioni",
-  "Enable actions": "Abilita operazioni",
+  "Configure actions": "Configura azioni",
+  "Enable actions": "Abilita azioni",
   "Turn pages": "Cambia pagina",
   "Select view": "Seleziona vista",
   "Add new": "Aggiungi nuovo",
