--- a/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/it-IT.json
@@ -4,7 +4,7 @@
   "Data": "Dati",
   "Task": "Attività",
   "Status": "Stato",
-  "Actions": "Operazioni",
+  "Actions": "Azioni",
   "Created at": "Creato alle",
   "Type": "Tipo",
   "Waiting": "In attesa",
