--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
@@ -3,7 +3,7 @@
   "Delete": "Elimina",
   "Cancel": "Annulla",
   "Submit": "Invia",
-  "Actions": "Operazioni",
+  "Actions": "Azioni",
   "Title": "Titolo",
   "Enable": "Abilita",
   "Chart": "Grafico",
