fix(Edit): enhance file upload handling with custom request support and add localization for upload messages

--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/de-DE.json
@@ -29,5 +29,7 @@
   "Both": "Editor & Vorschau",
   "Preview": "Vorschau",
   "Fullscreen": "Vollbild umschalten",
-  "Outline": "Gliederung"
+  "Outline": "Gliederung",
+  "uploading": "Hochladen...",
+  "upload failed": "Hochladen fehlgeschlagen"
 }
