--- a/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-field-markdown-vditor/src/locale/en-US.json
@@ -29,5 +29,7 @@
   "Both": "Editor & Preview",
   "Preview": "Preview",
   "Fullscreen": "Toggle Fullscreen",
-  "Outline": "Outline"
+  "Outline": "Outline",
+  "uploading": "uploading",
+  "upload failed": "upload failed"
 }
