--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -631,7 +631,7 @@
     "Are you sure you don't want to save?": "Sei sicuro di non voler salvare?",
     "Dragging": "Trascina",
     "Popup": "Popup",
-    "Trigger workflow": "Trigger flusso di lavoro",
+    "Trigger workflow": "Attivazione workflow",
     "Request API": "Richiesta API",
     "Assign field values": "Assegna valori del campo",
     "Constant value": "Valore costante",
