--- a/packages/plugins/@nocobase/plugin-file-manager/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-file-manager/src/locale/it-IT.json
@@ -18,8 +18,7 @@
   "Path": "Percorso",
   "Filename": "Nome file",
   "See more": "Vedi altro",
-  "Will be used for API": "Sarà utilizzato per l'API"
-  {
+  "Will be used for API": "Sarà utilizzato per l'API",  
   "File collection": "Raccolta file",
   "File name": "Nome file",
   "Extension name": "Nome estensione",
