--- a/packages/plugins/@nocobase/plugin-mobile/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-mobile/src/locale/it-IT.json
@@ -25,7 +25,7 @@
   "Mobile menu": "Menu mobile",
   "No accessible pages found": "Nessuna pagina accessibile trovata",
   "This might be due to permission configuration issues": "Questo potrebbe essere dovuto a problemi di configurazione dei permessi",
-  "Select time":"Seleziona orario"
+  "Select time":"Seleziona orario",
   "Fill": "Riempimento",
   "Mobile routes": "Percorsi mobile",
   "Clear": "Cancella",
