--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/it-IT.json
@@ -17,7 +17,7 @@
   "Create a brand new theme": "Crea un tema completamente nuovo",
   "Dark": "Scuro",
   "Compact": "Compatto",
-  "Compact dark": "Scuro compatto"
+  "Compact dark": "Scuro compatto",
   "Theme Editor": "Editor Tema",
   "Save": "Salva",
   "Close": "Chiudi",
