--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/it-IT.json
@@ -18,9 +18,9 @@
   "Channel display name": "Nome visualizzato canale",
   "Configure": "Configura",
   "Add new": "Aggiungi nuovo",
-  "Trigger From": "Attivato da",
+  "Trigger from": "Attivato da",
   "Status": "Stato",
-  "Created At": "Creato il",
+  "Created at": "Creato il",
   "Delete record": "Elimina record",
   "Are you sure you want to delete it?": "Sei sicuro di volerlo eliminare?",
   "Deleted successfully!": "Eliminato con successo!",
@@ -32,7 +32,7 @@
   "Select user": "Seleziona utente",
   "No channel enabled yet": "Nessun canale ancora abilitato",
   "Success": "Successo",
-  "Fail": "Fallito",
+  "Failure": "Fallimento",
   "Reason": "Motivo",
   "Failed reason": "Motivo fallimento",
   "Log detail": "Dettaglio registro",
