--- a/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/it-IT.json
@@ -2,7 +2,7 @@
   "Detail": "Dettaglio",
   "Snapshot": "Snapshot",  
   "Add block": "Aggiungi blocco",
-  "When adding a new record, create a snapshot for its relational record and save in the current record. The snapshot is not updated when the record is subsequently updated.": "Quando si aggiunge un nuovo record, crea uno snapshot del suo record relazionale e salvalo nel record corrente. Lo snapshot non viene aggiornato quando il record viene successivamente aggiornato.",
+  "When adding a new record, create a snapshot for its relational record and save in the new record. The snapshot will not be updated when the relational record is updated.": "Quando si aggiunge un nuovo record, crea uno snapshot del suo record relazionale e salvalo nel nuovo record. Quando il record relazionale viene aggiornato lo snapshot non verrà aggiornato .",
   "View record": "Visualizza record",
   "Allow linking to multiple records": "Consenti collegamento a più record",  
   "The association field to snapshot": "Campo di associazione per lo snapshot",
