--- a/packages/plugins/@nocobase/plugin-workflow-manual/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-workflow-manual/src/locale/it-IT.json
@@ -8,9 +8,9 @@
   "Configure user interface": "Configura interfaccia utente",
   "View user interface": "Visualizza interfaccia utente",
   "Separately": "Separato",  
-  "Each user has own task": "Ogni utente ha il proprio compito",
+  "Each user has own task": "Ogni utente ha la propria attività",
   "Collaboratively": "Collaborativo",
-  "Everyone shares one task": "Tutti condividono un compito",
+  "Everyone shares one task": "Tutti condividono un attività",
   "Negotiation": "Negoziazione",
   "All pass": "Tutti passano",
   "Everyone should pass": "Tutti dovrebbero passare",
